--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Title: Calculate Density Altitude from METAR
 Version: 0.1
 Authors@R: 
     person("Jordan", "Marshall", , "marshalj@pfw.edu", role = c("aut", "cre"))
+URL: https://github.com/PlantEcology/denaltitude
 Description: Simple function to calculate density altitude based on METAR data for a specific airport.
 License: `use_mit_license()`
 Encoding: UTF-8
